# grid20m

./: .readthedocs.yaml  README.md  environment.yml  grid20m_environment_no_build.yaml  grid20m_hist.yml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: conf.py  requirements.txt
docs/source/: conf.py  index.rst
docs/source/getting-started/: index.rst  installation.rst  usage.rst
docs/source/tutorials/: index.rst  mapping.rst
src/grid20m/: __init__.py  cli_args.py  grid.py  main.py  split.py
tutorials/: track_data_example.ipynb
