[project]
name = "grid20m"
description = ''
requires-python = ">=3.6, <3.9"
authors = [
  { name = "Pedro Salas", email = "psalas@nrao.edu" }
]
dynamic = ["version"]

dependencies = [
  "gbtgridder @ git+https://github.com/GreenBankObservatory/gbtgridder.git@release_2.0",
  "dysh @ git+https://github.com/GreenBankObservatory/dysh.git@pedro-devel"
]


[project.scripts]
grid20m = "grid20m.main:cli_main"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/bin"]
exclude = [
  "/.github",
  "/.gitignore",
  "*.swp",
  "/docs",
  "/benchmark"
#"/tests"?
]

[tool.hatch.build.targets.wheel]
packages = ["src/grid20m"]

[tool.hatch.version]
path = "src/grid20m/__init__.py"
